--- a/day02/Project1/Project1/Project1.vcxproj
+++ b/day02/Project1/Project1/Project1.vcxproj
@@ -127,12 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="test04_variable.cpp" />
-    <ClCompile Include="test05_pointer.cpp" />
-    <ClCompile Include="test01_defaultVal.cpp" />
-    <ClCompile Include="test02_inlineFunc.cpp" />
-    <ClCompile Include="test03_nameSp.cpp" />
-    <ClCompile Include="test06_swap.cpp" />
+    <ClCompile Include="test07_reference.cpp" />
+    <ClCompile Include="test09.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
