--- a/day09/Project1/Project1/Project1.vcxproj.filters
+++ b/day09/Project1/Project1/Project1.vcxproj.filters
@@ -15,40 +15,31 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test08.cpp">
+    <ClCompile Include="test01_operator+.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test01_ObjPointer.cpp">
+    <ClCompile Include="test02_GFuncOveroading.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test02_Overriding.cpp">
+    <ClCompile Include="test03_OneOpndOverloading.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test03_2완성.cpp">
+    <ClCompile Include="test04_add.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test04.cpp">
+    <ClCompile Include="test05_PostOpndOverloading.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test05_VirtualFunc.cpp">
+    <ClCompile Include="test06_PointMultipleOperation.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test06.cpp">
+    <ClCompile Include="test07_CommuMultipleOperation.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test07.cpp">
+    <ClCompile Include="test08_ConsoleOutput.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test09.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="test10.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="test11.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="test12.cpp">
+    <ClCompile Include="소스.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
